# Holy-Z

./: .gitignore  BUILD.md  COMPLETE_ENHANCEMENT_SUMMARY.md  ENHANCEMENT_IMPLEMENTATION_STATUS.md  ENHANCEMENT_PLAN.md  Holy-Z.sln  LANGUAGE_FEATURES.md  README.md  SYSTEM_ENHANCEMENTS_COMPLETE.md  vcpkg.json
.github/workflows/: build-and-package.yml
ExtraResources/Updates and Docs/: ARCHITECTURE.md  BUILD.md  BUILD_DEPLOY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MAIN_CPP_INTEGRATION_GUIDE.md  MERGE_AND_BUGFIX_SUMMARY.md  RUST_FEATURES.md  START_HERE.md
HolyZ/: CMakeLists.txt  HolyZ.vcxproj.filters  HolyZInstallerMakerInnoSetup.iss  Main.cpp  ZS.h  anyops.h  builtin.h  color.hpp  graphics.h  strops.cpp  strops.h  system_control.cpp  system_control.h  vcpkg.json
ZSharp/: CMakeLists.txt  HolyZ.vcxproj  Main.cpp  anyops.h  builtin.h  resource.h
examples/: case_insensitive.zs  console_application.zs  file_operations.zs  holy-c-example.zs  process_execution.zs  rust_features_demo.zs  system_info.zs
